--- a/bitrise.yml
+++ b/bitrise.yml
@@ -9,10 +9,16 @@ workflows:
         title: Initialize Submodules
         inputs:
         - content: make dependencies
+    - script@1: 
+        title: Update rbenv
+        inputs: 
+        - content: rbenv install 2.7.7
     - script@1:
         title: Bundle Install
         inputs:
-        - content: bundle config path vendor/bundle && bundle install --jobs 4 --retry 3
+        - content: | 
+            bundle config path vendor/bundle
+            bundle install --jobs 4 --retry 3
     - script@1:
         title: Build and test
         inputs:
