--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -83,6 +83,8 @@ workflows:
     triggering:
       <<: *push_event
     scripts:
+      - sysctl -n hw.ncpu
+      - /usr/sbin/system_profiler SPHardwareDataType
       - bundle update --bundler
       - *initializeSubmodules
       - *bundleInstall
